--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --config webpack.prod.js",
     "start-dev": "webpack serve --config webpack.dev.js",
     "tailwindcss-dev": "tailwindcss -i ./src/styles/input.css -o ./dist/output.css --watch",
-    "tailwindcss-prod": "tailwindcss -i ./src/styles/input.css -o ./dist/output.css --watch"
+    "tailwindcss-prod": "tailwindcss -i ./src/styles/input.css -o ./dist/output.css --watch",
+    "lint": "eslint src/"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^4.2.2",
+    "eslint": "^8.34.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
     "node-sass": "^8.0.0",
